# gomoku

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Gomoku.cbp  Gomoku.depend  Gomoku.layout  Makefile  README.txt  gomoku.sln  gomoku.sublime-project  source.mk  todo.txt
GUI/: Makefile  source.mk  todo
GUI/include/: GDisplay.hh  GError.hh
GUI/include/RenderObject/: AGRenderObject.hh  GROButton.hh
GUI/src/: GDisplay.cpp  GError.cpp  main.cpp
GUI/src/RenderObject/: AGRenderObject.cpp  GROButton.cpp
include/ai/: Client.hpp
include/client/: Client.hpp  GVAKeyPressedFocusSave.hpp  GVAMouseClickCallBack.hpp  GVAMouseClickTextureRect.hpp  GVAMouseHoverChangeColor.hpp  GVOButton.hpp  GVOCheckbox.hpp  GVOInputBox.hpp  GVOText.hpp  GView.hpp  GameInfo.hpp  GomokuGraphics.hpp  GomokuGraphicsHandler.hpp  IGVAKeyPressed.hpp  IGVAMouseClick.hpp  IGVAMouseHover.hpp  IGVAction.hpp  IGVObject.hpp  PlayerInfo.hpp  TextureManager.hpp
include/iprotocol/: ACallback.hpp  ATCP_packet.hpp  ITCP_protocol.hpp  TCP_packet_recv.hpp  TCP_packet_send.hpp  TCP_protocol.hpp
include/isocket/: ASocket.hpp  ISelect.hpp  ISocket.hpp  IStandard.hpp  ITCP_client.hpp  ITCP_server.hpp  IUDP_client.hpp  IUDP_server.hpp  Select.hpp  Standard.hpp  TCP_client.hpp  TCP_server.hpp  UDP_client.hpp  UDP_server.hpp
include/itime/: ITime.hpp  Time.hpp  Time_Windows.hpp
include/server/: AI.hpp  Arbitre.hpp  Black.hpp  Board.hpp  Client.hpp  Game.hpp  Options.hpp  Player.hpp  Server.hpp  Square.hpp  Utils.hpp  White.hpp
source/ai/: Client.cpp  main.cpp
source/client/: Client.cpp  GVOButton.cpp  GVOInputBox.cpp  GVOText.cpp  GView.cpp  GameInfo.cpp  GomokuGraphics.cpp  GomokuGraphicsHandler.cpp  PlayerInfo.cpp  TextureManager.cpp  main.cpp
source/iprotocol/: ATCP_packet.cpp  ITCP_protocol.cpp  TCP_packet_recv.cpp  TCP_packet_send.cpp  TCP_protocol.cpp
source/isocket/: ASocket.cpp  ISelect.cpp  ISocket.cpp  IStandard.cpp  ITCP_client.cpp  ITCP_server.cpp  Select.cpp  Standard.cpp  TCP_client.cpp  TCP_server.cpp
source/itime/: ITime.cpp  Time.cpp  Time_Windows.cpp
source/server/: AI.cpp  Arbitre.cpp  Black.cpp  Board.cpp  Client.cpp  Game.cpp  Options.cpp  Player.cpp  Server.cpp  Square.cpp  Utils.cpp  White.cpp  main.cpp
vs_gomoku_client/: GVAMouseClickActivate.hpp  vs_gomoku_client.vcxproj  vs_gomoku_client.vcxproj.filters
vs_gomoku_server/: vs_gomoku_server.vcxproj  vs_gomoku_server.vcxproj.filters
